improve placement of scatters in females plot

--- a/output/cnlsy_predict.tex
+++ b/output/cnlsy_predict.tex
@@ -1,24 +1,25 @@
-\begin{tabular}{lcccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) \\ 
-Group Matched & Control & Treatment & Control & Treatment & Control & Treatment \\ \midrule
-Male & 7,919.35*** & 7,755.32*** & 7,483.55*** & 7,472.02*** & 3,634.65*** & 3,740.61*** \\
- & (937.46) & (974.57) & (990.66) & (1,030.20) & (1,231.12) & (1,306.46) \\
-Black  & -7,480.51*** & -7,721.48*** & -3,669.31*** & -3,799.02*** & -1,853.59 & -2,022.28* \\
- & (925.86) & (961.86) & (989.18) & (1,029.09) & (1,156.85) & (1,202.94) \\
-Mother's Education & 1,888.32*** & 1,833.29*** & 303.02 & 288.90 & 284.94 & 235.17 \\
- & (258.71) & (271.05) & (293.84) & (309.08) & (357.69) & (393.81) \\
-PIAT (5-7) &  &  & 168.64*** & 170.88*** & 169.51*** & 169.89** \\
- &  &  & (48.44) & (50.18) & (63.42) & (66.41) \\
-Education (30)  &  &  & 3,678.09*** & 3,736.28*** & 2,223.04*** & 2,353.75*** \\
- &  &  & (250.08) & (264.84) & (434.21) & (457.65) \\
-Labor Income (21) &  &  & 0.51*** & 0.50*** &  &  \\
- &  &  & (0.06) & (0.06) &  &  \\
-BMI (34) &  &  & -45.78 & -48.11 & -174.13* & -183.16* \\
- &  &  & (70.83) & (72.79) & (96.27) & (100.26) \\
-Labor Income (28) &  &  &  &  & 0.48*** & 0.46*** \\
- &  &  &  &  & (0.07) & (0.07) \\
-Constant & 4,170.58 & 5,151.64* & -47,898.77*** & -48,608.54*** & -30,593.81*** & -31,042.44*** \\
- & (2,940.08) & (3,083.88) & (5,285.02) & (5,504.80) & (6,818.91) & (7,102.58) \\
- Observations & 1,880 & 1,876 & 1,463 & 1,459 & 734 & 733 \\ \\ \midrule
-$R^2$ & 0.09 & 0.09 & 0.29 & 0.29 & 0.50 & 0.49 \\ \bottomrule
+\begin{tabular}{lcccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) \\
+ & est1 & est1f & est2 & est2f & est3 & est3f \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  &  &  &  \\
+m\_ed0y & 2,294.73*** & 2,251.12*** & 275.82 & 397.99 & 266.67 & 366.31 \\
+ & (336.18) & (812.37) & (393.83) & (837.09) & (393.12) & (847.30) \\
+piatmath &  &  & 263.09*** & 470.85*** & 259.49*** & 490.51*** \\
+ &  &  & (59.50) & (158.54) & (59.13) & (159.21) \\
+years\_30y &  &  & 3,713.28*** & 4,371.25*** & 3,648.04*** & 4,282.09*** \\
+ &  &  & (377.30) & (741.68) & (371.77) & (740.21) \\
+si21y\_inc\_labor &  &  & 0.66*** & 0.75*** & 0.66*** & 0.74*** \\
+ &  &  & (0.07) & (0.14) & (0.07) & (0.14) \\
+cogfactor &  & 2,022.71 &  & -3,930.56* &  & -4,037.01* \\
+ &  & (1,728.57) &  & (2,238.62) &  & (2,220.01) \\
+noncogfactor &  & -3,500.73** &  & -1,269.84 &  & -1,179.83 \\
+ &  & (1,379.05) &  & (1,398.40) &  & (1,391.94) \\
+si34y\_bmi &  &  &  &  & -260.67*** & -163.52 \\
+ &  &  &  &  & (89.24) & (177.22) \\
+Constant & 2,752.37 & 4,545.39 & -56,214.36*** & -87,989.33*** & -47,351.08*** & -83,482.95*** \\
+ & (3,701.90) & (8,747.37) & (6,605.84) & (17,881.16) & (6,615.72) & (17,726.48) \\
+ &  &  &  &  &  &  \\
+Observations & 1,881 & 370 & 1,465 & 304 & 1,464 & 303 \\
+ R-squared & 0.03 & 0.05 & 0.21 & 0.32 & 0.21 & 0.32 \\ \hline
 \end{tabular}
