--- a/output/abccarepsid_mincerests.tex
+++ b/output/abccarepsid_mincerests.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{lcccccc} \hline
  & (1) & (2) & (3) & (4) & (5) & (6) \\
  & ed0 & ed1 & edexp0 & edexp1 & edexpsib0 & edexpsib1 \\
-VARIABLES & p\_inc & p\_inc & p\_inc & p\_inc & p\_inc & p\_inc \\ \hline
+VARIABLES & logp\_inc & logp\_inc & logp\_inc & logp\_inc & logp\_inc & logp\_inc \\ \hline
  &  &  &  &  &  &  \\
-m\_ed & 742.1897*** & 978.7382*** & 1,063.1488*** & 1,690.2384*** & 1,017.1167*** & 1,583.3166*** \\
- & (39.1654) & (273.3983) & (43.9485) & (266.3289) & (45.4251) & (353.7753) \\
-m\_experience &  &  & 362.6646*** & 1,623.0280*** & 393.9102*** & 1,575.5075*** \\
- &  &  & (19.9233) & (166.6054) & (21.3775) & (163.6788) \\
-m\_experience2 &  &  & -5.3872*** & -31.2945*** & -7.1518*** & -24.8391*** \\
- &  &  & (0.4286) & (5.4199) & (0.4555) & (5.3894) \\
-m\_birthyear &  &  &  &  & -31.3403*** & 337.2998** \\
- &  &  &  &  & (6.3028) & (162.5425) \\
-hhchildren &  &  &  &  & -707.0314*** & -1,190.2161* \\
- &  &  &  &  & (54.0880) & (718.1232) \\
-Constant & 5,394.2000*** & 8,020.0791*** & -2,535.7328*** & -11,353.6219*** & 60,535.4497*** & -669318.8731** \\
- & (464.0348) & (3,091.6988) & (578.0355) & (3,326.3362) & (12,359.1396) & (320,074.5244) \\
+m\_ed & 0.0762*** & 0.0614*** & 0.1155*** & 0.1000*** & 0.1109*** & 0.0852*** \\
+ & (0.0050) & (0.0161) & (0.0057) & (0.0151) & (0.0057) & (0.0184) \\
+m\_experience &  &  & 0.0386*** & 0.0908*** & 0.0417*** & 0.0861*** \\
+ &  &  & (0.0027) & (0.0086) & (0.0027) & (0.0085) \\
+m\_experience2 &  &  & -0.0005*** & -0.0018*** & -0.0007*** & -0.0015*** \\
+ &  &  & (0.0001) & (0.0003) & (0.0001) & (0.0003) \\
+m\_birthyear &  &  &  &  & -0.0041*** & 0.0104 \\
+ &  &  &  &  & (0.0008) & (0.0084) \\
+hhchildren &  &  &  &  & -0.0803*** & -0.0533 \\
+ &  &  &  &  & (0.0068) & (0.0372) \\
+Constant & 8.2789*** & 8.8869*** & 7.3572*** & 7.8229*** & 15.6408*** & -12.3540 \\
+ & (0.0609) & (0.1892) & (0.0780) & (0.1895) & (1.5533) & (16.6026) \\
  &  &  &  &  &  &  \\
 Observations & 15,506 & 705 & 15,506 & 705 & 15,506 & 664 \\
- R-squared & 0.0214 & 0.0138 & 0.0541 & 0.1997 & 0.0655 & 0.1983 \\ \hline
+ R-squared & 0.0145 & 0.0194 & 0.0416 & 0.2215 & 0.0514 & 0.2047 \\ \hline
 \end{tabular}
