--- a/heckman.bib
+++ b/heckman.bib
@@ -24,7 +24,7 @@
   Volume                   = {17},
 
   Doi                      = {10.1016/j.labeco.2009.05.003},
-  Owner                    = {Jessica Dyer},
+  Owner                    = {Jessica Dyer},w
   Timestamp                = {2016.03.03}
 }
 
