--- a/output/abccarepsid_mincerests_ready.tex
+++ b/output/abccarepsid_mincerests_ready.tex
@@ -4,14 +4,14 @@ Education & 0.08*** & 0.06*** & 0.12*** & 0.10*** & 0.11*** & 0.09*** \\
  & (0.01) & (0.02) & (0.01) & (0.02) & (0.01) & (0.02) \\
  Experience &  &  & 0.04*** & 0.09*** & 0.04*** & 0.09*** \\
  &  &  & (0.00) & (0.01) & (0.00) & (0.01) \\
-{Experience}$^2$ &  &  & -0.00*** & -0.00*** & -0.00*** & -0.00*** \\
+Experience &  &  & -0.00*** & -0.00*** & -0.00*** & -0.00*** \\
  &  &  & (0.00) & (0.00) & (0.00) & (0.00) \\
  Birth Year &  &  &  &  & -0.00*** & 0.01 \\
  &  &  &  &  & (0.00) & (0.01) \\
-\# Children &  &  &  &  & -0.08*** & -0.05 \\
+ Children &  &  &  &  & -0.08*** & -0.05 \\
  &  &  &  &  & (0.01) & (0.04) \\
 Constant & 8.28*** & 8.89*** & 7.36*** & 7.82*** & 15.64*** & -12.35 \\
  & (0.06) & (0.19) & (0.08) & (0.19) & (1.55) & (16.60) \\ \\ \midrule
 Observations & 15,506 & 705 & 15,506 & 705 & 15,506 & 664 \\
-$R^2$ & 0.01 & 0.02 & 0.04 & 0.22 & 0.05 & 0.20 \\ \bottomrule
+ & 0.01 & 0.02 & 0.04 & 0.22 & 0.05 & 0.20 \\ \bottomrule
 \end{tabular}
