--- a/output/abccarepsid_mincerests.tex
+++ b/output/abccarepsid_mincerests.tex
@@ -1,17 +1,21 @@
-\begin{tabular}{lcccccc} \toprule 
-           & PSID & ABC/CARE & PSID & ABC/CARE & PSID \\ \midrule
-Education & 0.08*** & 0.06*** & 0.12*** & 0.10*** & 0.11*** & 0.09*** \\
- & (0.01) & (0.02) & (0.01) & (0.02) & (0.01) & (0.02) \\
- Experience &  &  & 0.04*** & 0.09*** & 0.04*** & 0.09*** \\
- &  &  & (0.00) & (0.01) & (0.00) & (0.01) \\
-{Experience}$^2$ &  &  & -0.00*** & -0.00*** & -0.00*** & -0.00*** \\
- &  &  & (0.00) & (0.00) & (0.00) & (0.00) \\
- Birth Year &  &  &  &  & -0.00*** & 0.01 \\
- &  &  &  &  & (0.00) & (0.01) \\
-\# Children &  &  &  &  & -0.08*** & -0.05 \\
- &  &  &  &  & (0.01) & (0.04) \\
-Constant & 8.28*** & 8.89*** & 7.36*** & 7.82*** & 15.64*** & -12.35 \\
- & (0.06) & (0.19) & (0.08) & (0.19) & (1.55) & (16.60) \\ \\ \midrule
+\begin{tabular}{lcccccc} \hline
+ & (1) & (2) & (3) & (4) & (5) & (6) \\
+ & ed0 & ed1 & edexp0 & edexp1 & edexpsib0 & edexpsib1 \\
+VARIABLES & logp\_inc & logp\_inc & logp\_inc & logp\_inc & logp\_inc & logp\_inc \\ \hline
+ &  &  &  &  &  &  \\
+m\_ed & 0.0762*** & 0.0614*** & 0.1155*** & 0.1000*** & 0.1109*** & 0.0852*** \\
+ & (0.0050) & (0.0161) & (0.0057) & (0.0151) & (0.0057) & (0.0184) \\
+m\_experience &  &  & 0.0386*** & 0.0908*** & 0.0417*** & 0.0861*** \\
+ &  &  & (0.0027) & (0.0086) & (0.0027) & (0.0085) \\
+m\_experience2 &  &  & -0.0005*** & -0.0018*** & -0.0007*** & -0.0015*** \\
+ &  &  & (0.0001) & (0.0003) & (0.0001) & (0.0003) \\
+m\_birthyear &  &  &  &  & -0.0041*** & 0.0104 \\
+ &  &  &  &  & (0.0008) & (0.0084) \\
+hhchildren &  &  &  &  & -0.0803*** & -0.0533 \\
+ &  &  &  &  & (0.0068) & (0.0372) \\
+Constant & 8.2789*** & 8.8869*** & 7.3572*** & 7.8229*** & 15.6408*** & -12.3540 \\
+ & (0.0609) & (0.1892) & (0.0780) & (0.1895) & (1.5533) & (16.6026) \\
+ &  &  &  &  &  &  \\
 Observations & 15,506 & 705 & 15,506 & 705 & 15,506 & 664 \\
-$R^2$ & 0.01 & 0.02 & 0.04 & 0.22 & 0.05 & 0.20 \\ \bottomrule
+ R-squared & 0.0145 & 0.0194 & 0.0416 & 0.2215 & 0.0514 & 0.2047 \\ \hline
 \end{tabular}
