minor changes to c.8

--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -476,13 +476,13 @@ Table~\ref{table:endoginc} and ~\ref{table:endogti} show the results from this e
 
 \subsection{Parental Income}\label{app:parentalincome}
 
-\noindent A substantial fraction of the ABC/CARE benefits come from parental income. In practice, the program operates as a child care center from the parents' perspective. These parents were, in essence,  mothers: only $27\%$ of the mothers lived with a couple at baseline and there is little change in this afterward. ABC/CARE relaxed the time constraint of the mothers, enabling them to educate themselves more and/or work more. The program had treatment effects on (i) maternal education; (ii) maternal labor supply; and (iii) parental income.\footnote{See Appendix~\ref{appendix:results}.} Quantifying the effect of ABC/CARE on parental income not only requires to quantify its effects from ages 0 to 5, while the program was active. The program could have shifted the labor income profile through education or work experience. To test this, we need to quantify the effect that the program had from when it started until the time when the parents retired.\\ 
+\noindent A substantial fraction of the ABC/CARE benefits come from parental income. In practice, the program operates as a childcare center from the parents' perspective. These parents were, in essence,  mothers: only $27\%$ of the mothers lived with a partner at baseline and there is little change in this afterward. ABC/CARE relaxed the time constraint of the mothers, enabling them to educate themselves more and/or work more. The program had treatment effects on (i) maternal education; (ii) maternal labor supply; and (iii) parental income.\footnote{See Appendix~\ref{appendix:results}.} Quantifying the effect of ABC/CARE on parental income not only requires to quantify its effects from ages 0 to 5, while the program was active. The program could have shifted the labor income profile through education or work experience. To test this, we need to quantify the effect that the program had from when it started until the time when the parents retired.\\ 
 
-\noindent There are two options to monetize parental income. (i) A conservative approach that we follow in the main paper. We use the available information and calculate the treatment effect of the program on labor income from ages 0 to 21. We observe parental income at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. We interpolate between the ages that we observe and stop at age 21. The average age of the mothers at baseline was 21. On average, then, we omit 19 years of labor income if the mothers decide to retire at 60, 24 if they retire at 65, etc. (ii) A second approach is to use the available data together with an auxiliary sample to predict income beyond (children's) age 21. Option (i) is straightforward. We explain option (ii) next.\\
+\noindent There are two options to monetize parental income. (i) A conservative approach that we follow in the main paper. We use the available information and calculate the treatment effect of the program on labor income from ages 0 to 21. We observe parental income at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. We interpolate between the ages that we observe and stop at age 21. The average age of the mothers at baseline was 21. On average, then, we omit 19 years of labor income if the mothers decide to retire at 60, 24 if they retire at 65, etc. (ii) A second approach is to use the available data together with an auxiliary sample to predict income after the children are age 21. Option (i) is straightforward. We explain option (ii) next.\\
 
-\noindent To proceed with (ii), the first alternative would be to follow the methodology we propose in Section~\ref{section:cbamethodology}. The ideal dataset would allow us to construct a synthetic cohort of ABC/CARE-like mothers. Unfortunately, none of our auxiliary samples have mothers who are old enough to perform this exercise (i.e., we would be better off by limiting ourselves to the parental income we observe from ages 0 to 21). The second alternative would be use to construct a synthetic cohort based on mother's characteristics, disregarding children's characteristics. This is poses the challenge that we do not observe high-quality enough mother-level data to perform a matching procedure.\footnote{As stated before, we only see a handful of realizations of maternal labor income per age.} A third more plausible alternative is the following.\\
+\noindent To proceed with (ii), the first alternative would be to follow the methodology we propose in Section~\ref{section:cbamethodology}. The ideal dataset would allow us to construct a synthetic cohort of ABC/CARE-like mothers. Unfortunately, none of our auxiliary samples have mothers who are old enough to perform this exercise (i.e., we would be better off by limiting ourselves to the parental income we observe from ages 0 to 21). The second alternative would be use to construct a synthetic cohort based on mother's characteristics, disregarding the child's characteristics. This is poses the challenge that we do not observe high-quality enough mother-level data to perform a matching procedure.\footnote{As stated before, we only see a handful of realizations of maternal labor income per age.} A third more plausible alternative is the following.\\
 
-\noindent There is substantial variation on maternal age at baseline. Thus, when analyzing parental income, we need to consider that we have very few observations per age to estimate a parental labor income life-cycle profile. In this context, a useful alternative is to parameterize the profile of maternal labor income based on a Mincer-type equation.\footnote{See \citet{Mincer_1974_schooling} for the original source and \citet{Heckman_Lochner_ea_2006_HEE} for a extended discussion of the Mincer equation, its implications, and several extensions.} We specify how we deal with mothers living with a couple below. The parameterization we use is the following:
+\noindent There is substantial variation on maternal age at baseline. Thus, when analyzing parental income, we need to consider that we have very few observations per age to estimate a parental labor income life-cycle profile. In this context, a useful alternative is to parameterize the profile of maternal labor income based on a Mincer-type equation.\footnote{See \citet{Mincer_1974_schooling} for the original source and \citet{Heckman_Lochner_ea_2006_HEE} for a extended discussion of the Mincer equation, its implications, and several extensions.} We specify how we deal with mothers living with a partner below. The parameterization we use is the following:
 
 \begin{equation}
 \ln Y_{a} = \alpha + \beta \cdot \text{school}_{a} + \gamma_{1}  \cdot \text{experience}_{a} + \gamma_{2} \cdot {\text{experience}_{t}}^2 + \bm{\gamma} \mathbf{X}_{a} + \eta_{a}, \label{eq:mincer}
@@ -492,7 +492,7 @@ Table~\ref{table:endoginc} and ~\ref{table:endogti} show the results from this e
 
 \noindent In principle, there is no reason why the parameters characterizing the profile should differ across the treatment and control groups in ABC/CARE. Given the small sample in ABC/CARE, however, we assume that the profile is common across the control and treatment groups. This assumption is analogous to Assumption~\ref{ass:eczema}, which we fail to reject in Appendix~\ref{app:invariance}.\\
 
-\noindent We estimate the coefficients in \eqref{eq:mincer} using the sample of mothers in ABC/CARE. We pool the longitudinal information and estimate the coefficients using ordinary least squares. We use a standard Black-Welch measure of experience (age - education - 6) \citep{Smith_Welch_1979_IER}. For this estimation, we take mothers whose earnings are above $0$. For mothers living with a couple who report working, we consider $1/2$ of total parental income as $\ln Y_{a}$. To validate our estimates within ABC/CARE, we estimate the coefficients \eqref{eq:mincer} using a sub-sample of disadvantaged mothers in the PSID.\footnote{We define disadvantaged as follows: black, not married, labor income, education (at age 5 of child's participant), age and number of children (at age 5 of child's participant) in the same ranges as the ABC/CARE mothers, labor income below percentile 75.} The coefficients characterizing \eqref{eq:mincer} in ABC/CARE and PSID for different combinations of control sets are in agreement. We display them in Table~\ref{table:mincerpsid}.\\
+\noindent We estimate the coefficients in \eqref{eq:mincer} using the sample of mothers in ABC/CARE. We pool the longitudinal information and estimate the coefficients using ordinary least squares. We use a standard Black-Welch measure of experience (age - education - 6) \citep{Smith_Welch_1979_IER}. For this estimation, we take mothers whose earnings are above $0$. For mothers living with a partner who report to be working, we consider $1/2$ of total parental income as $\ln Y_{a}$. To validate our estimates within ABC/CARE, we estimate the coefficients \eqref{eq:mincer} using a sub-sample of disadvantaged mothers in the PSID.\footnote{We define disadvantaged as follows: black, not married, labor income, education (at age 5 of child's participant), age and number of children (at age 5 of child's participant) in the same ranges as the ABC/CARE mothers, labor income below percentile 75.} The coefficients characterizing \eqref{eq:mincer} in ABC/CARE and PSID for different combinations of control sets are in agreement. We display them in Table~\ref{table:mincerpsid}.\\
 
 \begin{table}[H] 
 \begin{threeparttable}
@@ -508,9 +508,9 @@ Table~\ref{table:endoginc} and ~\ref{table:endogti} show the results from this e
 \end{threeparttable}
 \end{table}
 
-\noindent Based on the estimates in Table~\ref{table:mincerpsid}, we can ask two questions: (i) what is the predicted net-present value of parental income (treatment - control) using a prediction based in the estimate of \eqref{eq:mincer} and how does it differ from the method that linearly interpolates income from child's age 0 to 21?; and (ii) what would be the predicted net present value of parental income if we go beyond and predict all the way up to age 60 (assumed retirement for mothers)?
+\noindent Based on the estimates in Table~\ref{table:mincerpsid}, we can ask two questions: (i) what is the predicted net present value of parental income (treatment - control) using a prediction based on the estimate of \eqref{eq:mincer} and how does it differ from the method that linearly interpolates income from child's age 0 to 21?; and (ii) what would be the predicted net present value of parental income if we go beyond and predict all the way up to age 60 (assumed retirement for mothers)?
 
-\noindent The results in Table~\ref{table:psens} present display results that enable us to answer these two questions. Estimates based on \eqref{eq:mincer} allow for a precise estimate of the the predicted net-present value of parental income (treatment - control) when children are 21 years old. This is to be expected given that we estimate \eqref{eq:mincer} with data from the ABC/CARE individuals. When using these same estimates to predict parental labor income such that mother works for 40 years in their life times, we find that the method we use in the main paper underestimates the gain based on parental income by around $\$30,000$ (2014 USD). The estimates we provide in the main paper represents a lower bound on the gain the program had due to its child care components.
+\noindent The results in Table~\ref{table:psens} display results that enable us to answer these two questions. Estimates based on \eqref{eq:mincer} allow for a precise estimate of the the predicted net present value of parental income (treatment - control) when the subjects are 21 years old. This is to be expected given that we estimate \eqref{eq:mincer} with data from the ABC/CARE individuals. When using these same estimates to predict parental labor income such that mothers work for 40 years in their life times, we find that the method we use in the main paper underestimates the gain based on parental income by around $\$30,000$ (2014 USD). The estimates we provide in the main paper represents a lower bound of the gain the program had due to its childcare components.
 
 \subsection{Cohort Effects}\label{app:cohorteffects}
 
