--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -485,9 +485,9 @@ We address this issue in Appendix~\ref{app:endogeneity} using a factor-structure
 
 \subsection{Parental Income}
 
-In practice, ABC/CARE had a child care component: parents of treated children were able to drop off their children in the center for eight hours a day during five years. This gain was mainly for mothers, given that only $27\%$ of mothers of children reported to live with someone at baseline and this barely changed afterward. Arguably, this is the component that generated the treatment effects in maternal education, labor force participation, and parental income that we report in Table~\ref{table:tescombined} and Appendix~\ref{app:results}. 
+In practice, ABC/CARE had a childcare component: parents of treated children were able to have their children in the center for eight hours a day for five years. This gain was mainly for mothers, given that only $27\%$ of mothers of children reported to live with a partner at baseline and this barely changed afterward. Arguably, this is the component that generated the treatment effects in maternal education, labor force participation, and parental income that we report in Table~\ref{table:tescombined} and Appendix~\ref{app:results}. 
 
-We observe parental income at eight different years distributed across the children participants' ages 0 to 21.\footnote{The ages are e observe parental income at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21.} In our main estimation, we consider the treatment effect on parental income without going beyond age 21. We linearly interpolate the ages in which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, the earnings should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income go all the way up to age 21. This is presumably due to wage growth due to higher education and/or experience. Thus, an ideal approach would consider the whole gain, from when the program starts all the way to retirement. Appendix~\ref{app:parentalincome} explains this approach and justifies why an alternative approach to that we use for labor and transfer income of the program participants is necessary. The results in Appendix~\ref{app:parentalincome} suggest that the gain due to parental income we use in the main estimation is a lower bound.
+We observe parental income at eight different years from when the subjects were born until they were 21.\footnote{The ages are e observe parental income at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21.} In our main estimation, we consider the treatment effect on parental income without going beyond age 21. We linearly interpolate the ages for which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, the earnings should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income go all the way up to age 21. This is presumably due to wage growth due to higher education and/or experience. Thus, an ideal approach would consider the whole gain, from when the program starts all the way to retirement. Appendix~\ref{app:parentalincome} explains this approach and justifies why an alternative approach to that we use for labor and transfer income of the program participants is necessary. The results in Appendix~\ref{app:parentalincome} suggest that the gain due to parental income we use in the main estimation is a lower bound.
 
 \subsection{Health} \label{section:health}
 
