--- a/output/abccarepsid_pincmincer.tex
+++ b/output/abccarepsid_pincmincer.tex
@@ -1,10 +1,7 @@
-% matrix: p_incsum file: abccarepsid_pincmincer.tex  22 Sep 2016 10:46:35
-\begin{table}[htbp]
-\begin{tabular}{lccc} \hline \hline
+\begin{tabular}{lccc} \toprule
  & pooled  & male  & female  \\  \hline 
-est & 75217.928 & 63906.197 & 86529.659 \\  
-pvalue &     0.036 &     0.159 &     0.059 \\  
-est &  1.07e+05 & 90989.602 &  1.23e+05 \\  
-pvalue &     0.036 &     0.159 &     0.059 \\  
+Mincer-based up to Child's Age 21 & 75217.928 & 63906.197 & 86529.659 \\  
+$p$-value &     0.036 &     0.159 &     0.059 \\  
+Mincer-based up to Retirement&   & 90,989.602 &   \\  
+$p$-value &     0.037 &     0.156 &     0.060 \\  
 \hline \hline \end{tabular}
-\end{table}
