--- a/heckman.bib
+++ b/heckman.bib
@@ -24,7 +24,7 @@
   Volume                   = {17},
 
   Doi                      = {10.1016/j.labeco.2009.05.003},
-  Owner                    = {Jessica Dyer},w
+  Owner                    = {Jessica Dyer},
   Timestamp                = {2016.03.03}
 }
 
@@ -18489,6 +18489,18 @@
   Volume                   = {5},
 
   Timestamp                = {2010.10.01}
+}
+
+@Unpublished{Conti-Heckman_2010_Socio-HO,
+  Title                    = {The Socioeconomic Determinants of Health Disparities: A Developmental Approach},
+  Author                   = {Conti, Gabriella and Heckman, James J.},
+  Note                     = {Presentation given at The 22nd Annual Dorothy J. MacLean Conference: A Conference Dedicated to the Memory of Stephen Toulmin, University of Chicago},
+
+  Month                    = {November},
+  Year                     = {2010},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.09.20}
 }
 
 @Unpublished{ContiHeckmanFruhwirthPiatek2013,
@@ -68720,6 +68732,18 @@ Robinson, Lara Rachel},
   Timestamp                = {2009.01.16}
 }
 
+@Book{Rutter_1972_Maternal-Deprivation,
+  Title                    = {Maternal Deprivation Reassessed},
+  Author                   = {Rutter, Michael},
+  Publisher                = {Penguin},
+  Year                     = {1972},
+
+  Address                  = {Oxford, UK},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.21}
+}
+
 @Article{Rutter_1971_JoCPaP,
   Title                    = {Parent-Child Separation: Psychological Effects on the Children},
   Author                   = {Rutter, Michael},
@@ -83785,6 +83809,11 @@ early childhood education and pre-kindergarten programs},
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.06.23}
+}
+
+@Unpublished{,
+  Owner                    = {Jenna},
+  Timestamp                = {2016.09.20}
 }
 
 @Misc{NewYorkTimes_2009_Flunk,
