--- a/output/abccare_endogcontrol_ti_ready.tex
+++ b/output/abccare_endogcontrol_ti_ready.tex
@@ -9,6 +9,6 @@ BMI (34) &         &         &         &         &         &         &         &
 $\hat{\theta}_{c}$ &         &         &  -311.979 &     0.695 &         &         &  -333.406 &     0.920 &         &         &  3369.035 &     0.185 \\  
 $\hat{\theta}_{n}$  &         &         &  1,671.334 &     0.060 &         &         &  -490.860 &     0.820 &         &         &  2,623.203 &     0.215 \\  
 Constant &  55,15.508 &     0.170 &  64,33.150 &     0.165 &  -133.337 &     0.855 &     0.405 &     0.105 & 41,827.480 &     0.110 & 65,580.359 &     0.110 \\  \\ \midrule
-Observations &     \multicolumn{2}{c}{0.027}  &     \multicolumn{2}{c}{0.137}  &     \multicolumn{2}{c}{0.217} &     \multicolumn{2}{c}{0.322}  &     \multicolumn{2}{c}{0.294}  &     \multicolumn{2}{c}{0.506}  \\  
-$R^2$ &    \multicolumn{2}{c}{67}  &    \multicolumn{2}{c}{51}  &    45  &    40 &    28  &    25  \\  
+$R^2$ &     \multicolumn{2}{c}{0.027}  &     \multicolumn{2}{c}{0.137}  &     \multicolumn{2}{c}{0.217}   &     \multicolumn{2}{c}{0.322}  &     \multicolumn{2}{c}{0.294}  &     \multicolumn{2}{c}{0.506}  \\  
+Observations &    \multicolumn{2}{c}{67}  &    \multicolumn{2}{c}{51} &    \multicolumn{2}{c}{45}  &    \multicolumn{2}{c}{40} &    \multicolumn{2}{c}{28}  &   \multicolumn{2}{c}{25}  \\  
 \bottomrule \end{tabular}
