--- a/output/abccarepsid_pincmincer.tex
+++ b/output/abccarepsid_pincmincer.tex
@@ -1,7 +1,10 @@
-\begin{tabular}{lccc} \toprule
+% matrix: p_incsum file: abccarepsid_pincmincer.tex  22 Sep 2016 12:40:08
+\begin{table}[htbp]
+\begin{tabular}{lccc} \hline \hline
  & pooled  & male  & female  \\  \hline 
-Mincer-based up to Child's Age 21 & 75217.928 & 63906.197 & 86529.659 \\  
-$p$-value &     0.036 &     0.159 &     0.059 \\  
-Mincer-based up to Retirement&   & 90,989.602 &   \\  
-$p$-value &     0.037 &     0.156 &     0.060 \\  
+est & 75114.081 & 72030.185 & 78197.977 \\  
+se &   428.340 &   647.017 &   557.716 \\  
+est &  1.07e+05 &  1.03e+05 &  1.11e+05 \\  
+se &   609.870 &   921.222 &   794.075 \\  
 \hline \hline \end{tabular}
+\end{table}
