mincer table in

--- a/output/abccarepsid_pincmincer.tex
+++ b/output/abccarepsid_pincmincer.tex
@@ -1,10 +1,10 @@
-% matrix: p_incsum file: abccarepsid_pincmincer.tex  22 Sep 2016 12:40:08
+% matrix: p_incsum file: abccarepsid_pincmincer.tex  22 Sep 2016 12:41:27
 \begin{table}[htbp]
 \begin{tabular}{lccc} \hline \hline
  & pooled  & male  & female  \\  \hline 
-est & 75114.081 & 72030.185 & 78197.977 \\  
-se &   428.340 &   647.017 &   557.716 \\  
+est &  7.51e+04 &  7.20e+04 &  7.82e+04 \\  
+se & 428.34018 & 647.01690 & 557.71582 \\  
 est &  1.07e+05 &  1.03e+05 &  1.11e+05 \\  
-se &   609.870 &   921.222 &   794.075 \\  
+se & 609.87043 & 921.22206 & 794.07519 \\  
 \hline \hline \end{tabular}
 \end{table}
