few changes in appendix

--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -423,11 +423,11 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 
 \subsection{Testing  Assumption~\ref{ass:corns}} \label{app:endogeneity}
 
-\noindent The framework in Appendix~\ref{app:invariance} is also useful to test Assumption~\ref{ass:corns} in the main paper. The reasoning is the following. Correlation between $\bm{X}_{t}$ and $\bm{\varepsilon}_{t}$ in the non-experimental sample biases our prediction. We can write and estimate a system similar to that in \eqref{eq:msystem} in the non-experimental sample and estimate an approximation of $\bm{\varepsilon}_{t}$. Then, we can ask if the coefficients characterizing our predictions change after controlling for this approximation. We can also ask if $\theta_{c}, \theta_{n}$ are significant predictors of the outcome being predicted. Using the estimates of $\theta_{c}, \theta_{n}$ that we obtain in Appendix~\ref{app:invariance}, we present evidence on this using the ABC/CARE sample by treatment status in Table~\ref{table:endinccont} to \ref{table:endtreattrans}.\\
+\noindent The framework in Appendix~\ref{app:invariance} is also useful to test Assumption~\ref{ass:corns} in the main paper. The reasoning is the following. Correlation between $\bm{X}_{t}$ and $\bm{\varepsilon}_{t}$ in the non-experimental sample biases our prediction. We can write and estimate a system similar to that in \eqref{eq:msystem} in the non-experimental sample and estimate an approximation of $\bm{\varepsilon}_{t}$. Then, we can ask if the coefficients characterizing our predictions change after controlling for this approximation. We can also ask if $\theta_{c}, \theta_{n}$ are significant predictors of the outcome being predicted. Using the estimates of $\theta_{c}, \theta_{n}$ that we obtain in Appendix~\ref{app:invariance}, we present evidence on this using the ABC/CARE sample by treatment status in this appendix.\\
 
 \noindent For want of data to approximate $\theta_{c}, \theta_{n}$ in PSID and NLSY79, we test this assumption using the CNLSY. Our measurement system for $\theta_{c}$ consists of PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT). Our measurement system for $\theta_{n}$ is based on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior).\\
 
-Table~\ref{table:endoginc} and ~\ref{table:endogti} show the results from this exercise for the two variables we predict, at age 30. We display specifications based on different control sets.\\ 
+\noindent Table~\ref{table:endoginc} and ~\ref{table:endogti} show the results from this exercise for the two variables we predict, at age 30. We display specifications based on different control sets.\\ 
 
 \noindent The coefficients characterizing our predictions in ABC/CARE and CNLSY do not present major changes after controlling for estimates of $\theta_{c}, \theta_{n}$. Further, these terms do not significantly determine the outcomes being predicted when we account for the full control set we use when predicting.
 
