--- a/output/abccare_endog_control_ready.tex
+++ b/output/abccare_endog_control_ready.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{lcccccccccccc} \toprule
  & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
+ & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
 Mother's Education &   750.205 &     0.365 &   176.630 &     0.445 &  -848.096 &     0.710 & -1006.963 &     0.705 & -2,173.476 &     0.850 & -3,037.516 &     0.865 \\  
 PIAT (5-7) &         &         &         &         &   105.463 &     0.340 &   485.077 &     0.195 &   409.121 &     0.205 &  1,097.040 &     0.040 \\  
 Education (30)  &         &         &         &         &  3,311.359 &     0.005 &  4,381.955 &     0.010 &  2,325.035 &     0.190 &  4,018.356 &     0.150 \\  
