updating program comparison table and .gitignore

--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -1,9 +1,3 @@
-
-\begin{sidewaystable}
-\begin{threeparttable}
-\caption{ABC and CARE, Programs Comparison} \label{tab:programcomparison}
-\footnotesize
-\scalebox{.92}{
 \begin{tabular}{L{4cm} L{7cm} L{7cm} C{3cm}} \toprule
 & \multicolumn{1}{c}{ABC}& \multicolumn{1}{c}{CARE} & \multicolumn{1}{c}{ABC = CARE ?} \\ \midrule
 \textbf{Program Overview} &&\\
@@ -33,7 +27,7 @@
 &1:4--5 during age 1--4 &1:4--5 during age 1--4 & \checkmark\\
 &1:5--6 during ages 4--5 & 1:5--6 during ages 4--5 & \checkmark\\
 \hspace{.5cm} Staff Qualifications &Mixed diplomas; experienced& Mixed diplomas; experienced & \checkmark\\ \\
-\hspace{.5cm} \textbf{Family Education}  & & \\
+\hspace{.5cm} \textbf{Home Visitation}  & & \\
 \hspace{.5cm} N & (not part of the program) &27\\
 \hspace{.5cm} Intensity && Home visits lasting 1 hour. 2--3 per month during ages 0--3. 1--2 per month during ages 4--5\\
 \hspace{.5cm} Curriculum & & Social and mental stimulation; parent-child interaction\\
@@ -48,11 +42,4 @@
 \hspace{.5cm} Staff-to-child Ratio &1:1& 1:1 &\checkmark\\
 \hspace{.5cm} Staff Qualifications &Graduate degree and training in special education & Graduate degree and training in special education & \checkmark\\
 \bottomrule
-\end{tabular}}
-\footnotesize
-\begin{tablenotes}
-\item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that  \\ ABC and CARE had the same characteristic.
-\end{tablenotes}
-\end{threeparttable}
-\end{sidewaystable}
-\doublespacing 
+\end{tabular}
