--- a/heckman.bib
+++ b/heckman.bib
@@ -41109,6 +41109,37 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2009.01.13}
 }
 
+@Article{Hinde-Spencer-Booth_1971_AB,
+  Title                    = {Towards Understanding Individual Differences in Rhesus Mother-Infant Interaction},
+  Author                   = {Hinde, Robert A. and Spencer-Booth, Yvette},
+  Journal                  = {Animal Behaviour},
+  Year                     = {1971},
+
+  Month                    = {February},
+  Number                   = {1},
+  Pages                    = {165--173},
+  Volume                   = {19},
+
+  Doi                      = {10.1016/S0003-3472(71)80152-5},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.22}
+}
+
+@Article{Hinde-Spencer-Booth_1971_Science,
+  Title                    = {Effects of Brief Separation from Mother on Rhesus Monkeys},
+  Author                   = {Hinde, Robert A. and Spencer-Booth, Yvette},
+  Journal                  = {Science},
+  Year                     = {1971},
+
+  Month                    = {July},
+  Number                   = {3992},
+  Pages                    = {111--118},
+  Volume                   = {173},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.22}
+}
+
 @Article{Hines_etal_2011_Science,
   Title                    = {Investing Early in Education},
   Author                   = {Hines, P.J. and Mervis, J. and McCartney, M. and Wible, B.},
@@ -48605,6 +48636,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {63},
 
   Owner                    = {Lynn}
+}
+
+@Unpublished{Lagakos_Moll_etal_2016_LifeCycle_NBER,
+  Title                    = {Life-Cycle Wage Growth Across Countries},
+  Author                   = {Lagakos, David and Moll, Benjamin and Porzio, Tommaso and Qian, Nancy  and Schoellman, Todd},
+  Note                     = {Forthcoming, Journal of Political Economy},
+  Year                     = {2016},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.25}
 }
 
 @Book{Lagemann_1983_BOOKprivate,
@@ -69067,6 +69108,21 @@ Robinson, Lara Rachel},
   Timestamp                = {2008.10.06}
 }
 
+@InCollection{Sackett_1968_Abnormal-Behavior,
+  Title                    = {Abnormal Behavior in Laboratory-Reared Rhesus Monkeys},
+  Author                   = {Sackett, Gene P.},
+  Booktitle                = {Abnormal Behavior in Animals},
+  Publisher                = {Saunders},
+  Year                     = {1968},
+
+  Address                  = {Philadelphia, PA},
+  Editor                   = {Fox, M. W.},
+  Pages                    = {293--331},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.22}
+}
+
 @Article{Sackett_Borneman_etal_2008_AP,
   Title                    = {High stakes testing in higher education and employment: Appraising the evidence for validity and fairness},
   Author                   = {Sackett, Paul R. and Borneman, Matthew J. and Connelly, Brian S.},
@@ -73314,6 +73370,22 @@ Robinson, Lara Rachel},
   Volume                   = {12},
 
   Timestamp                = {2009.01.16}
+}
+
+@Article{Spencer-Booth-Hinde_1966_JCPP,
+  Title                    = {The Effects of Separating Rhesus Monkey Infants from Their Mothers for Six Days},
+  Author                   = {Spencer-Booth, Yvette and Hinde, Robert A.},
+  Journal                  = {Journal of Child Psychology and Psychiatry},
+  Year                     = {1966},
+
+  Month                    = {December},
+  Number                   = {3--4},
+  Pages                    = {179--197},
+  Volume                   = {7},
+
+  Doi                      = {10.1111/j.1469-7610.1966.tb02245.x},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.22}
 }
 
 @Book{Spiegelhalter_Abrams_etal_2004_BOOKBayesianApproaches,
