--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -1,25 +1,33 @@
-% matrix: allbc file: allbc_sens.tex  25 Sep 2016 09:11:16
-\begin{table}[htbp]
-\begin{tabular}{lcccccc} \hline \hline
- & pooled  & pooled  & males  & males  & females  & females  \\  \hline 
-baseline &      2.53 &      0.05 &      9.75 &      0.05 &      5.56 &      0.05 \\  
-specification &      2.81 &      2.74 &      9.79 &      9.76 &      5.99 &      5.32 \\  
-. &      0.06 &      0.03 &      0.06 &      0.04 &      0.04 &      0.04 \\  
-predictiontime &      1.11 &      2.72 &      1.85 &      2.72 &      1.62 &      2.05 \\  
-. &      0.41 &      2.00 &      0.63 &      2.00 &      0.42 &      0.83 \\  
-counterfactual &      4.77 &      2.30 &      4.38 &     12.47 &      4.41 &      6.22 \\  
-. &      0.05 &      0.06 &      0.04 &      0.04 &      0.03 &      0.04 \\  
-dwl &      3.60 &      1.99 &     14.54 &      7.35 &      8.25 &      4.22 \\  
-. &      1.43 &      0.77 &      6.96 &      3.49 &      3.58 &      1.80 \\  
-discount &      4.92 &      1.37 &     25.40 &      3.54 &     13.39 &      2.34 \\  
-. &      3.36 &      0.36 &     13.58 &      1.50 &      6.57 &      0.84 \\  
-parental &      2.79 &         . &      9.94 &         . &      5.79 &         . \\  
-. &      1.00 &         . &      4.65 &         . &      2.41 &         . \\  
-lincome &      2.12 &      0.59 &      7.18 &      3.62 &      4.88 &      0.86 \\  
-. &      0.72 &      0.00 &      3.97 &      0.00 &      2.11 &      0.00 \\  
-crime &      2.64 &      2.17 &     11.74 &      7.28 &      5.25 &      4.06 \\  
-. &      0.05 &      0.93 &      0.04 &      3.44 &      0.04 &      1.67 \\  
-health &      2.37 &      2.68 &      9.05 &     10.49 &      4.72 &      6.41 \\  
-. &      0.91 &      1.25 &      4.39 &      5.25 &      2.34 &      2.64 \\  
-\hline \hline \end{tabular}
-\end{table}
+\begin{tabular}{lcccccc} \toprule
+	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	\\ 
+Baseline	&	\multicolumn{2}{c}{2.53 (s.e. 0.97)}	&	\multicolumn{2}{c}{9.75 (s.e. 4.64)}	&	\multicolumn{2}{c}{5.56 (s.e. 2.39)}	\\ \\
+\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to Age 79, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\ 
+\multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
+Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
+	&	2.81	&	2.74	&	9.79	&	9.76	&	5.99	&	5.32	\\
+	&	(0.94)	&	(0.78)	&	(5.03)	&	(3.60)	&	(2.31)	&	(2.03)	\\ \midrule
+Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
+Span	&	1.11	&	2.72	&	1.85	&	2.72	&	1.62	&	2.05	\\
+	&	(0.41)	&	(2.00)	&	(0.63)	&	(2.00)	&	(0.42)	&	(0.83)	\\ \midrule
+Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
+factuals	&	4.77	&	2.30	&	4.38	&	12.47	&	4.41	&	6.22	\\
+	&	(1.40)	&	(0.90)	&	(2.65)	&	(5.13)	&	(1.34)	&	(2.23)	\\ \midrule
+Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
+loss	&	3.60	&	1.99	&	14.54	&	7.35	&	8.25	&	4.22	\\
+	&	(1.43)	&	(0.77)	&	(6.96)	&	(3.49)	&	(3.58)	&	(1.80)	\\ \midrule
+Discount 	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	\\
+Rate	&	4.92	&	1.37	&	25.40	&	3.54	&	13.39	&	2.34	\\
+	&	(3.36)	&	(0.36)	&	(13.58)	&	(1.50)	&	(6.57)	&	(0.84)	\\ \midrule
+Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
+Income	&	2.79	&		&	9.94	&		&	5.79	&		\\
+	&	(1.00)	&		&	(4.65)	&		&	(2.41)	&		\\ \midrule
+Labor	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	&	\textit{.5\% Annual Growth}	&	\textit{Only Benefit}	\\
+Income	&	2.12	&	0.59	&	7.18	&	3.62	&	4.88	&	0.86	\\
+	&	(0.72)	&	(0.00)	&	(3.97)	&	(0.00)	&	(2.11)	&	(0.00)	\\ \midrule
+Crime	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	&	\textit{Drop Major Crimes}	&	\textit{Half Costs}	\\
+	&	2.64	&	2.17	&	11.74	&	7.28	&	5.25	&	4.06	\\
+	&	(1.02)	&	(0.93)	&	(5.57)	&	(3.44)	&	(2.37)	&	(1.67)	\\ \midrule
+Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
+(QALYs)	&	2.37	&	2.68	&	9.05	&	10.49	&	4.72	&	6.41	\\
+	&	(0.91)	&	(1.25)	&	(4.39)	&	(5.25)	&	(2.34)	&	(2.64)	\\ \bottomrule
+\end{tabular}
