small changes to pinc section in main paper

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -520,9 +520,9 @@ We also examine if our predictions differ when we control for the proxied factor
 
 In practice, ABC/CARE had a childcare component: parents of treated children were able to have their children in the center for eight hours a day for five years. This gain was mainly for mothers, given that only $27\%$ of mothers of children reported to live with a partner at baseline and this barely changed afterward. Arguably, this is the component that generated the treatment effects in maternal education, labor force participation, and parental income that we report in Table~\ref{table:tescombined} and Appendix~\ref{appendix:results}.
 
-We observe parental income at eight different years from when the subjects were born until they were 21.\footnote{The ages are e observe parental income at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21.} Our baseline estimation considers the treatment effect on parental income without going beyond age 21. We linearly interpolate the ages for which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, the earnings should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income go all the way up to age 21. This is presumably due to wage growth due to higher education and/or experience. An ideal approach considers the profile from when the program starts all the way to retirement. We propose two alternative approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; (ii) an approach based on the same methodology as in Section~\ref{section:cbamethodology}. We present estimates based on the baseline approach and for these two alternatives in Section~\ref{section:cbaresults}.
+We observe parental income at eight different years from when the subjects were born until they were 21.\footnote{The ages are e observe parental income at ages 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21.} Our baseline estimation considers the treatment effect on parental income without going beyond age 21. We linearly interpolate the ages for which we do not have observations between 0 and 21.\footnote{Depending on the model of labor supply, the earnings should or should not include the value of forgone leisure. We conduct a sensitivity analysis below by considering the case when markets are assumed to be clearing and the marginal value of leisure is the market wage.} As Table~\ref{table:tescombined} shows, treatment effects on parental income sustain through age 21. This is presumably due to wage growth due to higher education and/or experience. An ideal approach considers the profile from when the program starts all the way to retirement of the mothers. We propose two alternative approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; (ii) an approach based on the same methodology as in Section~\ref{section:cbamethodology}. We present estimates based on the baseline approach and for these two alternatives in Section~\ref{section:cbaresults}.
 
-Before proceeding with the reminder of the methodology, we make the following remark. If it is true that ABC/CARE had a childcare component benefiting parental labor market outcomes, it is likely the case that it benefited parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect. This is especially the case for mothers. Figure~\ref{figure:pincome} presents evidence that is consistent with this: the net gain (treatment less control) on the sum of parental income from ages 0 to 21 is much higher in the absence of siblings (of the participant children) at baseline. This calculation is based on the baseline method for accounting for parental income.
+Before proceeding with the reminder of the methodology, we make the following remark. If it is true that ABC/CARE had a childcare component benefiting parental labor market outcomes, it is likely the case that it benefited parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect. Figure~\ref{figure:pincome} presents evidence that is consistent with this: the net gain (treatment minus control) on the sum of parental income from ages 0 to 21 is much higher in the absence of siblings (of the participant children) at baseline. This calculation is based on the baseline method for accounting for parental income.
 
 \begin{figure}[!htbp]
 \centering
