temp bib addition

--- a/heckman.bib
+++ b/heckman.bib
@@ -1,6 +1,13 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
+@article{jarosch2014searching,
+  title={{Searching for job security and the consequences of job loss}},
+  author={Jarosch, Gregor},
+  journal={Forthcoming, \textit{Econometrica}},
+  year={2016}
+}
+
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
